--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,9 @@
 <head>
   <title>JPN</title>
   <link rel="stylesheet" href="/styles/style.css">
+  <link rel="icon" type="image/png" href="/images/logo.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
   <%- include('partials/header'); %>
