--- a/views/success.ejs
+++ b/views/success.ejs
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title>ยืนยันการซื้อเรียบร้อย</title>
   <link rel="stylesheet" href="/styles/style.css">
+  <link rel="icon" type="image/png" href="/images/logo.png">
 </head>
 <body>
   <%- include('partials/header'); %>
