--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header class="topbar">
-  
+  <link rel="icon" type="image/png" href="/images/logo.png">
   <a class="logo" href="/">
   <img src="/images/logo.png" alt="Home" class="logo-img"></a>
   <nav class="nav">
