--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -46,7 +46,7 @@
       <img src="/images/qrpay.png" class="qrpay-img">
 
         <p>ผู้ซื้อ: <strong><%= (user && (user.display_name || user.email)) || '-' %></strong></p>
-        <p>อีเมลล์: <strong><%= user.email %></strong></p>
+        <p>อีเมล: <strong><%= user.email %></strong></p>
 
         <p>ราคารวม: <strong>฿<%= Number(total).toFixed(2) %></strong></p>
 
